fix: agregar scripts y dependencias para Vercel

--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
+  "name": "juego-unidad",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5173"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "vite": "^5.3.4",
+    "@vitejs/plugin-react": "^4.2.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
